--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 <link href='https://fonts.googleapis.com/css?family=Londrina+Shadow' rel='stylesheet' type='text/css'>
-<script src="/assets/jquery.js"></script>
+<script src="jquery-1.11.0.min.js"></script>
 <style>
 body {
   font-family: helvetica, sans-serif;
