--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <link href='https://fonts.googleapis.com/css?family=Londrina+Shadow' rel='stylesheet' type='text/css'>
 <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<meta content='width=device-width, initial-scale=1' name='viewport'/>
 <style>
 body {
   font-family: helvetica, sans-serif;
