--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@ small {
 
 <body>
 <h1>esha's restaurant</h1>
-<h2>a New York City eatery</h2>
+<h2>a New York City eatery</br>Женя's edition</h2>
+
 <div class="first">
   <p>welsh onion soko <span class="price">$14</span><br />
   <small>Mustard sierra leone bologi kale chard beet greens black-eyed pea sorrel amaranth garlic tigernut spring onion summer purslane asparagus lentil. </small></p>
